# Sdfr

./: README.md
docs/: original_submission_README.txt
src/ball_detector/: CMakeLists.txt  README.txt  package.xml
src/ball_detector/src/: ball_detector.cpp
src/relbot_launch/: README.txt  package.xml
src/relbot_launch/launch/: full_tracking_system.launch.py  lab_hardware.launch.py  relbot_sequence_controller.launch.py
src/relbot_sequence_controller/: CMakeLists.txt  README.txt  package.xml
src/relbot_sequence_controller/include/: steering_sim.hpp
src/relbot_sequence_controller/src/: relbot_sequence_controller.cpp
