<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>relbot_launch</name>
  <version>0.0.0</version>
  <description>Launch files for the Assignment 6 green-ball closed-loop tracking workflows (simulation and physical RELbot).</description>
  <maintainer email="m.r.q.p.goncalo@student.utwente.nl">Goncalo Pinheiro</maintainer>
  <maintainer email="c.ceylan@student.utwente.nl">Ceyhun Ceylan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>relbot_adapter</exec_depend>
  <exec_depend>relbot_simulator</exec_depend>
  <exec_depend>relbot_sequence_controller</exec_depend>
  <exec_depend>relbot2turtlesim</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
