<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>relbot_sequence_controller</name>
  <version>0.0.0</version>
  <description>Closed-loop ball-tracking controller for the RELbot: steers on horizontal ball position, uses blob area as a distance proxy, and searches when the ball is lost.</description>
  <maintainer email="m.r.q.p.goncalo@student.utwente.nl">Goncalo Pinheiro</maintainer>
  <maintainer email="c.ceylan@student.utwente.nl">Ceyhun Ceylan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
